# TrajectoryLibrary

./: CMakeLists.txt  README.md  mover.py  package.xml
.github/workflows/: c-cpp.yml
config/: paths.ply
include/TrajectoryLibrary/: CostFunction.h  Costmap.h  GoalManager.h  Trajectory.h  TrajectoryLibraryManager.h  TrajectoryLibraryWrapper.h
launch/: trajectory_library.launch
scripts/: automation.sh  path_generation.m  path_generator2.m  test_bot_moves.py  test_shim.py
src/: CostFunction.cpp  Costmap.cpp  GoalManager.cpp  Trajectory.cpp  TrajectoryLibraryManager.cpp  TrajectoryLibraryWrapper.cpp
test/: straight_line.test
